<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="24dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextFolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="30dp"
            android:text="@string/folder_menu_title"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tv_option_rename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/folder_menu_rename"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_baseline_create_24"
            app:drawableTint="@color/folder_menu_icon" />

        <TextView
            android:id="@+id/tv_option_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawablePadding="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/folder_menu_delete"
            android:textSize="18sp"
            app:drawableLeftCompat="@drawable/ic_baseline_delete_forever_24"
            app:drawableTint="@color/folder_menu_icon" />

        <TextView
            android:id="@+id/tv_cancel"
            style="@style/TextFolderName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:text="@string/folder_menu_cancel"
            android:textAlignment="center" />

    </LinearLayout>

</layout>