<?xml version="1.0" encoding="utf-8"?>

<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main_blue"
        android:paddingStart="16dp"
        android:paddingTop="16dp"
        android:paddingEnd="16dp"
        android:paddingBottom="30dp"
        tools:context=".presentation.editfolder.EditFolderActivity">

        <EditText
            android:id="@+id/et_folder_name"
            style="@style/Text.Folder.Count"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:textColor="@color/text_item_enabled"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_16dp"
            android:backgroundTint="@color/white"
            android:hint="@string/hint_new_folder"
            android:importantForAutofill="no"
            android:inputType="textCapSentences"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            app:layout_constraintBottom_toTopOf="@id/btn_cancel" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_cancel"
            android:theme="@style/Button.White"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_save"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_save"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:background="@drawable/rounded_button"
            android:text="@string/btn_save"
            android:theme="@style/Button.Green"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/btn_cancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
